New LycoScript compiler